# interactive-goocanvas

./: .gitignore  README.md  com.github.akiraux.interactive-goocanvas.json  meson.build
src/: Application.vala  HeaderBar.vala  ResponsiveCanvas.vala  Window.vala
vapi/: goocanvas-2.0.vapi
